--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>MY CV</title>
-  <link rel="stylesheet" href="cv.css" />
+  <link rel="stylesheet" href="index.css" />
   <link rel="icon" href="icon.jpg" type="image/icon" sizes="16x16">
 </head>
 
